--- a/src/components/expenceItems/ItemBody.css
+++ b/src/components/expenceItems/ItemBody.css
@@ -40,6 +40,16 @@
   font-weight: bold;
 }
 
+.editTitle{
+  margin-right: 8px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.titleIn{
+  width: 65%;
+}
+
 .price{
   /* border: 2px solid red;  */
   font-size: 20px;
